openshift/reservation-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: bookshelf
  name: reservation
spec:
  host: bookshelf-dev.cloud.nikio.io
  path: /reservation/api/v1/
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: reservation
    weight: 100
  wildcardPolicy: None
